# app/Models/PostComment.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class PostComment extends Model
+{
+    use SoftDeletes;
+    
+    public function user() {
+        return $this->belongsTo(User::class);
+    }
+}
